# moltis

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  biome.json  changelog.html  justfile  mobile-pwa.html  openclaw-import.html  print.html  searchindex.js  toc.html  toc.js
.claude/: biome-results.tsv  branch_review_targets.csv  reduced-validation-results.tsv
.claude/validation-results-parts/: feat__agent-effectiveness.tsv  feat__session-durability.tsv  fix__audit-hardening-phase1.tsv  integrate__hypervisor-patterns.tsv  worktree-agent-effectiveness-improvements.tsv
.github/workflows/: ci.yml  release.yml
apps/macos/Sources/: MoltisApp.swift  SettingsSectionContent+Environment.swift
apps/macos/UITests/: MoltisUITests.swift
crates/agents/: Cargo.toml
crates/agents/src/: classify.rs  cross_session.rs  intent_drift.rs  intent_tracker.rs  leak_detector.rs  lib.rs  model.rs  prompt.rs  provider_chain.rs  provider_health.rs  rate_limiter.rs  research.rs  response_sanitizer.rs  runner.rs  self_repair.rs  silent_turn.rs  tool_registry.rs
crates/auth/: Cargo.toml
crates/auth/src/: credential_store.rs  webauthn.rs
crates/auto-reply/src/: queue.rs
crates/benchmarks/: Cargo.toml
crates/browser/: Cargo.toml
crates/browser/src/: actions.rs  api_capture.rs  api_recon.rs  api_recon_inference.rs  api_recon_types.rs  challenge.rs  container.rs  detect.rs  emulation.rs  error.rs  host_guard.rs  lib.rs  manager.rs  network.rs  patchright.rs  patchright_session.rs  patchright_worker.py  pool.rs  protection.rs  screencast.rs  session_state.rs  snapshot.rs  telemetry.rs  types.rs  virtual_display.rs
crates/browser/src/stealth/: args.rs  behavior.rs  evasions.js  mod.rs
crates/browser/tests/: integration_tests.rs  real_sites_test.rs
crates/caldav/: Cargo.toml
crates/caldav/src/: tool.rs
crates/channels/: Cargo.toml
crates/channels/src/: plugin.rs
crates/chat/: Cargo.toml
crates/chat/src/: chat_error.rs  compaction.rs  history_context.rs  lib.rs  policy.rs
crates/cli/: Cargo.toml
crates/cli/src/: auth_commands.rs  db_commands.rs  doctor_commands.rs  estop_commands.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: handoff.rs  hooks.rs  lib.rs  trace.rs
crates/config/: Cargo.toml
crates/config/src/: agent_defs.rs  lib.rs  loader.rs  schema.rs  template.rs  validate.rs
crates/cron/: Cargo.toml
crates/cron/migrations/: 20260304090000_heartbeat_engagement.sql
crates/cron/src/: event_matcher.rs  heartbeat.rs  lib.rs  schedule.rs  service.rs  store_file.rs  store_memory.rs  store_sqlite.rs  types.rs
crates/discord/: Cargo.toml
crates/discord/src/: handler.rs  plugin.rs
crates/gateway/: Cargo.toml
crates/gateway/migrations/: 20260102000000_agent_spend.sql  20260102000001_pending_approvals.sql  20260304091500_agents_spawn_capabilities.sql
crates/gateway/src/: agent_persona.rs  approval.rs  auth_middleware.rs  auth_routes.rs  broadcast.rs  broadcast_types.rs  channel.rs  channel_agent_tools.rs  channel_events.rs  channel_outbound.rs  chat.rs  dispatch.rs  env_routes.rs  lib.rs  local_llm_setup.rs  mcp_agent_tools.rs  mcp_health.rs  mcp_service.rs  metrics_routes.rs  onboarding.rs  pairing.rs  provider_setup.rs  push.rs  push_routes.rs  server.rs  services.rs  session.rs  session_types.rs  state.rs  tailscale_routes.rs  tinder_subsystem.rs  tools_routes.rs  upload_routes.rs  voice.rs  ws.rs
crates/gateway/tests/: auth_middleware.rs  chat_ui.rs  turn_undo_integration.rs
crates/graphql/: Cargo.toml
crates/graphql/src/: error.rs
crates/graphql/tests/: integration.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  manager.rs  registry.rs  tool_bridge.rs
crates/media/: Cargo.toml
crates/media/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/migrations/: 20260304031500_memory_state.sql
crates/metrics/: Cargo.toml
crates/moltis-tinder/: Cargo.toml
crates/moltis-tinder/migrations/: 20260101000000_init.sql
crates/moltis-tinder/src/: browser_tool.rs  cron.rs  error.rs  funnel.rs  funnel_tool.rs  hooks.rs  lib.rs  lock.rs  util.rs
crates/msteams/: Cargo.toml
crates/network-filter/: Cargo.toml
crates/oauth/: Cargo.toml
crates/onboarding/: Cargo.toml
crates/plugins/: Cargo.toml
crates/plugins/src/: hooks.rs
crates/plugins/src/bundled/: circuit_breaker.rs  cost_guard.rs  estop.rs  leak_detector.rs  mod.rs  pattern_scanner.rs  prompt_guard.rs  screenshot_resolver.rs  task_board.rs
crates/projects/: Cargo.toml
crates/protocol/: Cargo.toml
crates/provider-setup/: Cargo.toml
crates/providers/: Cargo.toml
crates/schema-export/: Cargo.toml
crates/service-traits/: Cargo.toml
crates/sessions/: Cargo.toml
crates/sessions/src/: compaction.rs  integrity.rs  lib.rs  message.rs  session_events.rs  state_store.rs  store.rs  undo.rs
crates/skills/: Cargo.toml
crates/skills/src/: archive_audit.rs  attenuation.rs  audit.rs  discover.rs  evals.rs  formats.rs  install.rs  integrity.rs  lib.rs  local.rs  manifest.rs  migration.rs  parse.rs  prompt_gen.rs  registry.rs  requirements.rs  selector.rs  types.rs
crates/swift-bridge/: Cargo.toml
crates/swift-bridge/src/: lib.rs
crates/tailscale/: Cargo.toml
crates/tasks/: Cargo.toml
crates/tasks/migrations/: 20260303120000_create_tasks.sql  20260304120000_add_output_store.sql
crates/tasks/src/: errors.rs  event_log.rs  guards.rs  intent_state.rs  lib.rs  output_store.rs  recovery.rs  state.rs  store.rs  transitions.rs  types.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: handlers.rs
crates/tls/: Cargo.toml
crates/tools/: Cargo.toml
crates/vault/: Cargo.toml
crates/voice/: Cargo.toml
crates/wasm-tools/calc/: Cargo.toml
crates/web/: Cargo.toml
crates/whatsapp/: Cargo.toml
docs/src/: SUMMARY.md  browser-automation.md  compaction-v2.md  configuration.md  mcp.md  memory-lifecycle.md  memory.md  metrics-and-tracing.md  persona-precedence.md  skill-tools.md  system-prompt.md
prompts/: integration-ledger-2026-03-03.md  session-2026-03-06-browser-protection.md
scripts/: i18n-check.sh  local-validate.sh
(+120 files in other folders)
