[package]
edition.workspace = true
name              = "moltis-browser"
version.workspace = true

[dependencies]
async-trait    = "0.1"
base64         = { workspace = true }
chromiumoxide  = { default-features = false, features = ["tokio-runtime"], version = "0.8" }
futures        = { workspace = true }
moltis-common  = { workspace = true }
moltis-config  = { workspace = true }
moltis-metrics = { optional = true, workspace = true }
moltis-vault   = { optional = true, workspace = true }
rand           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sha2           = { optional = true, workspace = true }
sysinfo        = { workspace = true }
thiserror      = { workspace = true }
time           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
url            = "2.5"
uuid           = { workspace = true }
which          = "8.0"

[features]
default = []
live-sites = []
metrics = ["dep:moltis-metrics"]
session-encrypt = ["dep:moltis-vault", "dep:sha2"]
stealth = []
tracing = []

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
