[package]
description       = "Personal AI gateway inspired by OpenClaw"
edition.workspace = true
homepage          = "https://www.moltis.org/"
license           = "MIT"
name              = "moltis"
repository        = "https://github.com/moltis-org/moltis"
version.workspace = true

[package.metadata.deb]
assets     = [["target/release/moltis", "usr/bin/", "755"]]
copyright  = "2025, Moltis Contributors"
depends    = "$auto"
maintainer = "Moltis Contributors"
name       = "moltis"
priority   = "optional"
section    = "net"

[package.metadata.generate-rpm]
assets  = [{ dest = "/usr/bin/moltis", mode = "0755", source = "target/release/moltis" }]
license = "MIT"
name    = "moltis"
summary = "Personal AI gateway inspired by OpenClaw"
url     = "https://www.moltis.org/"

[[bin]]
name = "moltis"
path = "src/main.rs"

[dependencies]
anyhow                 = { workspace = true }
clap                   = { workspace = true }
dotenvy                = { workspace = true }
moltis-agents          = { workspace = true }
moltis-browser         = { workspace = true }
moltis-common          = { workspace = true }
moltis-config          = { workspace = true }
moltis-cron            = { workspace = true }
moltis-gateway         = { optional = true, workspace = true }
moltis-memory          = { workspace = true }
moltis-oauth           = { workspace = true }
moltis-onboarding      = { workspace = true }
moltis-openclaw-import = { optional = true, workspace = true }
moltis-plugins         = { workspace = true }
moltis-projects        = { workspace = true }
moltis-sessions        = { workspace = true }
moltis-skills          = { workspace = true }
moltis-tools           = { workspace = true }
moltis-web             = { optional = true, workspace = true }
open                   = { workspace = true }
rand                   = { workspace = true }
reqwest                = { workspace = true }
secrecy                = { workspace = true }
serde_json             = { workspace = true }
sqlx                   = { workspace = true }
time                   = { workspace = true }
tokio                  = { workspace = true }
tracing                = { workspace = true }
tracing-subscriber     = { workspace = true }
which                  = { workspace = true }

[target.'cfg(all(not(target_os = "windows"), not(all(target_os = "linux", target_arch = "aarch64"))))'.dependencies]
tikv-jemallocator = { optional = true, workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
# Most feature flags (tls, tailscale, metrics, voice, etc.) imply `gateway`
# via their dep lists below. Code should still double-gate with
# `#[cfg(all(feature = "gateway", feature = "X"))]` when using gateway types.
agent = ["gateway", "moltis-gateway/agent", "moltis-web?/agent"]
caldav = ["gateway", "moltis-gateway/caldav"]
default = [
  "agent",
  "caldav",
  "code-splitter",
  "file-watcher",
  "gateway",
  "graphql",
  "jemalloc",
  "local-llm",
  "local-llm-metal",
  "mdns",
  "metrics",
  "openclaw-import",
  "prometheus",
  "push-notifications",
  "qmd",
  "tailscale",
  "tls",
  "trusted-network",
  "vault",
  "voice",
  "wasm",
  "web-ui",
  "whatsapp",
]
# Minimal build for memory-constrained devices (Raspberry Pi, etc.).
# Build with: cargo build --release --no-default-features --features lightweight
code-splitter   = ["moltis-memory/code-splitter"]
file-watcher    = ["gateway", "moltis-gateway/file-watcher"]
gateway         = ["dep:moltis-gateway"]
graphql         = ["gateway", "moltis-gateway/graphql", "moltis-web?/graphql"]
jemalloc        = ["dep:tikv-jemallocator"]
lang-bash       = ["moltis-memory/lang-bash"]
lang-c          = ["moltis-memory/lang-c"]
lang-cpp        = ["moltis-memory/lang-cpp"]
lang-css        = ["moltis-memory/lang-css"]
lang-html       = ["moltis-memory/lang-html"]
lang-java       = ["moltis-memory/lang-java"]
lang-json       = ["moltis-memory/lang-json"]
lang-markdown   = ["moltis-memory/lang-markdown"]
lang-ruby       = ["moltis-memory/lang-ruby"]
lang-toml       = ["moltis-memory/lang-toml"]
lang-typescript = ["moltis-memory/lang-typescript"]
# jemalloc is intentionally unavailable on linux/aarch64 to avoid runtime
# crashes on 16 KiB page kernels (e.g. Raspberry Pi OS variants).
lightweight        = ["jemalloc", "tls", "web-ui"]
local-llm          = ["gateway", "moltis-gateway/local-llm"]
local-llm-cuda     = ["gateway", "local-llm", "moltis-gateway/local-llm-cuda"]
local-llm-metal    = ["gateway", "local-llm", "moltis-gateway/local-llm-metal"]
mdns               = ["gateway", "moltis-gateway/mdns"]
metrics            = ["gateway", "moltis-gateway/metrics", "moltis-web?/metrics"]
openclaw-import    = ["gateway", "dep:moltis-openclaw-import", "moltis-gateway/openclaw-import"]
prometheus         = ["gateway", "moltis-gateway/prometheus"]
push-notifications = ["gateway", "moltis-gateway/push-notifications", "moltis-web?/push-notifications"]
qmd                = ["gateway", "moltis-gateway/qmd"]
tailscale          = ["gateway", "moltis-gateway/tailscale", "moltis-web?/tailscale"]
tls                = ["gateway", "moltis-gateway/tls"]
trusted-network    = ["gateway", "moltis-gateway/trusted-network"]
vault              = ["gateway", "moltis-gateway/vault", "moltis-web?/vault"]
voice              = ["gateway", "moltis-gateway/voice", "moltis-web?/voice"]
wasm               = ["moltis-tools/wasm"]
web-ui             = ["gateway", "dep:moltis-web", "moltis-gateway/web-ui"]
whatsapp           = ["gateway", "moltis-gateway/whatsapp"]

[lints]
workspace = true
