[package]
edition.workspace = true
name              = "moltis-common"
description       = "Shared types, errors, and utilities for Moltis."
version.workspace = true

[dependencies]
async-trait    = { workspace = true }
futures        = { workspace = true }
moltis-metrics = { optional = true, workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sha2           = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }

[features]
default = []
metrics = ["dep:moltis-metrics"]

[lints]
workspace = true
