[package]
edition.workspace = true
name              = "moltis-media"
description       = "Image processing helpers for Moltis media attachments."
version.workspace = true

[dependencies]
image          = { workspace = true }
moltis-metrics = { optional = true, workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }

[features]
default = []
metrics = ["dep:moltis-metrics"]

[lints]
workspace = true
