[package]
edition.workspace = true
name              = "moltis-tinder"
description       = "Tinder-specific automation and tools for Moltis."
version.workspace = true

[dependencies]
anyhow      = { workspace = true }
async-trait = { workspace = true }
base64      = { workspace = true }
image       = { workspace = true }
moltis-agents  = { workspace = true }
moltis-common  = { workspace = true }
moltis-cron    = { workspace = true }
regex       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sqlx        = { workspace = true }
thiserror   = { workspace = true }
time        = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }

[dev-dependencies]
tokio = { features = ["macros", "rt-multi-thread"], workspace = true }

[lints]
workspace = true
