[package]
edition.workspace = true
name              = "moltis-plugins"
version.workspace = true

[dependencies]
anyhow          = { workspace = true }
async-trait     = { workspace = true }
aho-corasick    = { workspace = true }
base64          = { workspace = true }
moltis-agents   = { workspace = true }
moltis-common   = { workspace = true }
moltis-config   = { workspace = true }
moltis-metrics  = { optional = true, workspace = true }
moltis-sessions = { workspace = true }
regex           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
sqlx            = { workspace = true }
thiserror       = { workspace = true }
time            = { workspace = true }
tokio           = { workspace = true }
toml            = { workspace = true }
tracing         = { workspace = true }
unicode-normalization = { workspace = true }
uuid            = { workspace = true }

[features]
default = []
metrics = ["dep:moltis-metrics"]

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { features = ["macros", "rt"], workspace = true }

[lints]
workspace = true
