[package]
edition.workspace = true
name              = "moltis-protocol"
description       = "Gateway WebSocket and RPC protocol types for Moltis."
version.workspace = true

[dependencies]
moltis-metrics = { optional = true, workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }

[features]
default = []
metrics = ["dep:moltis-metrics"]

[lints]
workspace = true
