[package]
edition.workspace = true
name              = "moltis-sessions"
description       = "Session storage and management for Moltis."
version.workspace = true

[features]
default = ["metrics"]
metrics = ["dep:moltis-metrics"]

[dependencies]
fd-lock        = { workspace = true }
moltis-common  = { workspace = true }
moltis-metrics = { optional = true, workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sqlx           = { workspace = true }
thiserror      = { workspace = true }
time           = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
