[package]
edition.workspace = true
name              = "moltis-skills"
description       = "Skill discovery, parsing, and installation for Moltis."
version.workspace = true

[dependencies]
anyhow                = { workspace = true }
async-trait           = { workspace = true }
flate2                = { workspace = true }
moltis-config         = { workspace = true }
moltis-metrics        = { optional = true, workspace = true }
notify-debouncer-full = { optional = true, workspace = true }
reqwest               = { workspace = true }
regex                 = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
serde_yaml            = { workspace = true }
sha2                  = { workspace = true }
tar                   = { workspace = true }
time                  = { workspace = true }
tokio                 = { workspace = true }
tracing               = { workspace = true }

[features]
default      = []
file-watcher = ["dep:notify-debouncer-full"]
metrics      = ["dep:moltis-metrics"]

[dev-dependencies]
rstest   = { workspace = true }
tempfile = { workspace = true }
tokio    = { features = ["macros", "rt"], workspace = true }

[lints]
workspace = true
