[package]
edition.workspace = true
name              = "moltis-tasks"
description       = "Task orchestration for multi-agent coordination in Moltis."
version.workspace = true

[features]
default  = ["metrics", "tracing"]
metrics  = ["dep:moltis-metrics"]
tracing  = ["dep:tracing"]

[dependencies]
anyhow       = { workspace = true }
blake3       = { workspace = true }
moltis-metrics = { optional = true, workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
sqlx         = { workspace = true }
thiserror    = { workspace = true }
time         = { workspace = true }
tokio        = { workspace = true }
tracing      = { optional = true, workspace = true }
uuid         = { features = ["v7"], workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { features = ["macros", "rt-multi-thread"], workspace = true }

[lints]
workspace = true
