[package]
edition.workspace = true
name              = "moltis-telegram"
description       = "Telegram channel plugin for Moltis."
version.workspace = true

[dependencies]
async-trait       = { workspace = true }
base64            = { workspace = true }
moltis-channels   = { workspace = true }
moltis-common     = { workspace = true }
moltis-media      = { workspace = true }
moltis-metrics    = { optional = true, workspace = true }
rand              = { workspace = true }
reqwest           = { workspace = true }
secrecy           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
teloxide          = { workspace = true }
thiserror         = { workspace = true }
tokio             = { workspace = true }
tokio-util        = { workspace = true }
tracing           = { workspace = true }

[features]
default = []
metrics = ["dep:moltis-metrics"]

[dev-dependencies]
axum   = { workspace = true }
rstest = { workspace = true }
tokio  = { workspace = true }

[lints]
workspace = true
